--- a/WaterBattle/css/main.css
+++ b/WaterBattle/css/main.css
@@ -2,6 +2,10 @@
     border-spacing: 0px;
     border-collapse: collapse;
 }
+#caption{
+    display: flex;
+    flex-direction: column;
+}
 td {
     border: 1px solid black;
     width: 40px;
