--- a/JSONPlaceholder/css/main.css
+++ b/JSONPlaceholder/css/main.css
@@ -46,7 +46,7 @@ body{
 
 .content-left,
 .content-right{
-    margin: 40px;
+    margin: 40px 20px 40px 20px;
     padding: 20px;
     overflow: auto;
     border: 1px solid #d1d5da;
@@ -58,7 +58,6 @@ body{
 
 .content-left{
     position: relative;
-    min-width: 415px;
 }
 
 .left-posts-box{
@@ -73,7 +72,6 @@ body{
 
 .content-left__post-item,
 .content-right__post-item{
-    width: 100%;
     height: auto;
     background-color: #f1f1f1;
     box-shadow: 0 0 10px rgba(0,0,0,0.10);
@@ -116,18 +114,13 @@ body{
     border-radius: 5px 0px 5px 0px;
 }
 
-
-.content-right{
-    width: 100%;
-}
 .content-right__post-item{
-    width: 30%;
     margin: 16px;
 }
 
 .content-right__posts-box{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .active{
@@ -135,24 +128,9 @@ body{
     opacity: 1;
 }
 
-@media screen and (max-width: 1620px) {
-    .content-right__post-item{
-        width: 46%;
-        margin: 16px;
-    }
-}
-
-@media screen and (max-width: 1473px) {
-    .content-right__post-item{
-        width: 45%;
-        margin: 16px;
-    }
-}
-
 @media screen and (max-width: 1314px) {
-    .content-right__post-item{
-        width: 100%;
-        margin: 16px;
+    .content-right__posts-box{
+        grid-template-columns: 1fr 1fr;
     }
 }
 
@@ -160,12 +138,30 @@ body{
     .content{
         flex-direction: column;
     }
-    .content-right {
-        width: auto;
+    .content-right__posts-box{
+        grid-template-columns: 1fr;
+    }
+    .content-right__post-item{
+        margin: 5px;
+    }
+    .content-left,
+    .content-right{
         height: 50%;
+        margin: 0;
     }
     .content-left{
-        min-width: auto;
-        height: 50%;
+        margin-bottom: 10px;
+    }
+    .content__title{
+        font-size: 25px;
+    }
+    .post-item__wrapper {
+        padding: 10px;
+    }
+    .post-item__title{
+        font-size: 14px;
+    }
+    .post-item__body{
+        font-size: 12px;
     }
 }
