--- a/googlePage/css/blocks/logo-container/search-form/search-form.css
+++ b/googlePage/css/blocks/logo-container/search-form/search-form.css
@@ -23,6 +23,11 @@
     padding-right: 10px;
 }
 
+.search-form__search-box_active{
+    box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+    border-color: rgba(223,225,229,0);
+}
+
 .search-form__input-img{
     cursor: pointer;
     padding: 10px;
@@ -68,6 +73,7 @@
     justify-content: space-between;
     cursor: default;
     line-height: 1.4;
+    align-items: center;
 }
 
 .data-list__value_history{
@@ -78,6 +84,8 @@
 
 .data-list__value_history{
     font-weight: bold;
+    word-break: break-word;
+    max-width: 430px;
 }
 
 .data-list__remove{
