--- a/googlePage/css/components/inputs/input__theme_search-form.css
+++ b/googlePage/css/components/inputs/input__theme_search-form.css
@@ -6,8 +6,7 @@
     outline: none;
 }
 
-.search-form__search-box:hover,
-.search-form__search-box:focus{
+.search-form__search-box:hover{
     box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
     border-color: rgba(223,225,229,0);
 }
