--- a/snake/style.css
+++ b/snake/style.css
@@ -1,8 +1,3 @@
-#area{
-    width: 100%;
-    height: 100%;
-}
-
 #area td{
     height: 15px;
     width:15px;
@@ -74,6 +69,15 @@ input{
     background-image: url("img/block.png");
     background-repeat: inherit;
 }
+.crashBlock_1 {
+    background-image: url("img/crashBlock_1.png");
+    background-repeat: inherit;
+}
+.crashBlock_2 {
+    background-image: url("img/crashBlock_2.png");
+    background-repeat: inherit;
+}
+
 
 .hpBlock{
     background-image: url("img/HP.png");
@@ -87,6 +91,7 @@ input{
 .freeGame{
     background-color: cadetblue;
     padding: 5px;
+    width: 100%
 }
 
 .startCaption{
@@ -109,6 +114,30 @@ input{
     padding: 6px;
     text-decoration: none;
     color: black;
+}
+.options-wrapper {
+    position: relative;
+}
+#bg {
+    position: absolute;
+    display: none;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+#material {
+    display: none;
+    align-items: center;
+    justify-content: space-between;
+    width: 200px;
+
+}
+
+#material img {
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
 }
 
 #popup:target{
