--- a/snake/style.css
+++ b/snake/style.css
@@ -1,3 +1,8 @@
+.largeTable {
+    table-layout: fixed;
+    width: 1000px;
+}
+
 #area td{
     height: 15px;
     width:15px;
@@ -56,6 +61,9 @@ input{
 }
 
 .gameArea{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -84,6 +92,9 @@ input{
 }
 
 .options{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     margin-bottom: 10px;
 }
@@ -123,12 +134,20 @@ input{
     display: none;
     left: 50%;
     top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
 }
 
 #material {
     display: none;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     width: 200px;
 
@@ -141,6 +160,9 @@ input{
 }
 
 #popup:target{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -152,6 +174,9 @@ input{
     height: 100%;
     background-color: #00000075;
     display: none;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -161,6 +186,7 @@ input{
     height: 458px;
     margin-top: 100px;
     border-radius: 15px;
+    -webkit-box-shadow: 0 0 60px rgba(0,0,0,0.5);
     box-shadow: 0 0 60px rgba(0,0,0,0.5);
     background-color: white;
     opacity: 1;
